--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,61 +1,25 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    font-family: 'Courier New', Courier, monospace;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(90,90,194,1) 35%, rgba(47,181,208,1) 100%);
+    background-color: cornsilk;
 }
 
-.calculadora{
+.containter {
     text-align: center;
-    padding: 50px;
+    background-color: aquamarine;
+    padding: 20px;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1);
-    background: rgb(79, 46, 168);
 }
 
-input{
-    padding: 10px;
-    margin-bottom: 30px; /*separar botones del cuadro blanco*/
-    font-size: 1.5em;
-    text-align: center;
+form {
+    margin-bottom: 20px;
 }
 
-.botones{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-}
-
-button{
-    padding: 15px;
-    font-size: 1.2em;
-    cursor: pointer;
-}
-
-button:hover{
-    background-color: rgb(61, 209, 209);
-}
-
-footer {
-    background-color: black;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    color: white;
-    text-align: center;
-}
-
-header{
-width: 100%;
-height: 60px;
-z-index: 0;
-color: #FFFFFF !important;
-position: fixed;
-top: 0;
-text-align: right;
-font-size: large;
+.oculto {
+    display: none;
 }
