--- a/assets/style.css
+++ b/assets/style.css
@@ -1,25 +1,25 @@
-body {
-    font-family: 'Courier New', Courier, monospace;
+body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: cornsilk;
+    background-color: beige;
 }
 
-.containter {
+.container{
     text-align: center;
-    background-color: aquamarine;
+    background-color:aquamarine;
     padding: 20px;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1);
 }
 
-form {
+form{
     margin-bottom: 20px;
 }
 
-.oculto {
+.oculto{
     display: none;
 }
