--- a/styles/style2.css
+++ b/styles/style2.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url('img/back.jpg') no-repeat;
+    background-image: url(/img/back.jpg);
     background-size: cover;
     font-family: 'Century Gothic', sans-serif;
 }
